--- a/package.json
+++ b/package.json
@@ -1,27 +1,46 @@
 {
-  "name": "awesome",
+  "name": "awesome-unified",
   "private": true,
   "version": "0.0.0",
   "description": "Curated list of awesome unified resources",
   "license": "CC-BY-4.0",
   "keywords": [],
-  "repository": "unifiedjs/awesome",
-  "bugs": "https://github.com/unifiedjs/awesome/issues",
+  "repository": "unifiedjs/awesome-unified",
+  "bugs": "https://github.com/unifiedjs/awesome-unified/issues",
   "author": "Titus Wormer <tituswormer@gmail.com> (wooorm.com)",
   "contributors": [
     "Titus Wormer <tituswormer@gmail.com> (wooorm.com)"
   ],
   "devDependencies": {
+    "awesome-lint": "^0.10.0",
     "remark-cli": "^6.0.0",
-    "remark-preset-wooorm": "^4.0.0"
+    "remark-preset-wooorm": "^5.0.0"
   },
   "scripts": {
-    "format": "remark . -qfo",
+    "format": "remark . -qo",
     "test": "npm run format"
   },
   "remarkConfig": {
+    "settings": {
+      "listItemIndent": "1"
+    },
     "plugins": [
-      "preset-wooorm"
+      "preset-wooorm",
+      [
+        "lint-list-item-indent",
+        "space"
+      ],
+      [
+        "toc",
+        {
+          "heading": "contents"
+        }
+      ],
+      "awesome-lint/config",
+      [
+        "awesome-lint/rules/contributing.js",
+        false
+      ]
     ]
   }
 }
